터미널 인터페이스

--- a/ya2048/Cargo.toml
+++ b/ya2048/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 #bevy.workspace = true
 rand.workspace = true
+termion = "4.0.5"
 
 [profile.test.package."*"]
 opt-level = 3
