--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 members = ["ya2048"]
 resolver = "3"
 
+[profile.test.package."*"]
+opt-level = 3
+
 [workspace.dependencies]
 #bevy = "0.16.0"
 rand = "0.9.1"
